<resources>
    <string name="app_name">Budget Bowl</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_expense_activity">Add Expense</string>
    <string name="Review_Expense_Fragment">Expense Review</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_prizes">Prizes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_graph">Expense Graph</string>
    <string name="category">Category</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="filter_date">Filter Date</string>
    <string name="top_decoration">Top Decoration</string>
    <string name="home_button">Home Button</string>
</resources>