<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jacob.budgetbowl.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jacob.budgetbowl.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jacob.budgetbowl.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/tester"
        android:name="com.jacob.budgetbowl.tester.Test_Fragment"
        android:label="testlabel"
        tools:layout="@layout/fragment_test_"
        />

    <activity
        android:id="@+id/ExpenseEntryActivity"
        android:name="com.jacob.budgetbowl.AddExpenseActivity"
        android:label="@string/add_expense_activity"
        tools:layout="@layout/activity_add_expense"

        />

</navigation>