<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundBlue"
    tools:context=".ui.CategoryGraph">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgTopDecor"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/topimagestretched"
            android:contentDescription="@string/top_decoration" />

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_home"
            android:background="@color/inputBlue"
            android:contentDescription="@string/home_button" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtExpenseGraphHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Expense Graph"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/graphFrame"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/inputBlue">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>
    
    <TextView
        android:id="@+id/txtTotalBudgetHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Budget"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textAlignment="center" />
    
    <LinearLayout
        android:id="@+id/totalBudgetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ProgressBar
            android:id="@+id/totalBudgetProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scaleY="4"
            android:max="100" />



    </LinearLayout>
    
    <TextView
        android:id="@+id/txtCategoryHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCategorySpending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/startDatee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/select_start_date"
            android:focusable="false"
            android:clickable="true"
            android:autofillHints="" />

        <EditText
            android:id="@+id/EndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/select_end_date"
            android:focusable="false"
            android:clickable="true"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/filterBTN"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/filter_date"
        android:textSize="20sp"
        app:backgroundTint="@color/buttonBlue"  />

</LinearLayout>